# OpenGameDevEngine

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md
assets/: README.md
docs/: IMPLEMENTATION_SUMMARY.md  PR_TESTING.md  ROADMAP.md
docs/api/: README.md
docs/design/: ARCHITECTURE.md
docs/tutorials/: README.md  camera_usage.md
examples/: CMakeLists.txt  README.md  README.md.bak
examples/2d-platformer/: CMakeLists.txt  main.cpp
examples/3d-demo/: CMakeLists.txt  camera_demo.cpp  main.cpp  triangle_demo.cpp
examples/basic/: CMakeLists.txt  main.cpp
include/: OpenGameDevEngine.h
include/ogde/audio/: AudioEngine.h
include/ogde/core/: Config.h  Engine.h  FileSystem.h  Logger.h  Math.h
include/ogde/graphics/: Camera.h  Material.h  Renderer.h  RendererD3D11.h  Shader.h  Texture.h  Window.h
include/ogde/input/: InputManager.h
include/ogde/networking/: NetworkManager.h
include/ogde/physics/: PhysicsEngine.h
include/ogde/platform/: Platform.h  WindowWin32.h
include/ogde/scripting/: ScriptEngine.h
scripts/: README.md  build.bat  setup.bat  test-pr.bat  test-pr.sh
src/: CMakeLists.txt
src/audio/: AudioEngine.cpp  CMakeLists.txt
src/core/: CMakeLists.txt  Config.cpp  Engine.cpp  FileSystem.cpp  Logger.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Material.cpp  Renderer.cpp  RendererD3D11.cpp  Shader.cpp  Texture.cpp
src/input/: CMakeLists.txt  InputManager.cpp
src/networking/: CMakeLists.txt  NetworkManager.cpp
src/physics/: CMakeLists.txt  PhysicsEngine.cpp
src/platform/: CMakeLists.txt  Platform.cpp  WindowWin32.cpp
src/scripting/: CMakeLists.txt  ScriptEngine.cpp
tests/: CMakeLists.txt
tests/audio/: CMakeLists.txt  test_audio.cpp
tests/core/: CMakeLists.txt  test_engine.cpp
tests/graphics/: CMakeLists.txt  test_renderer.cpp
tests/input/: CMakeLists.txt  test_input.cpp
tests/physics/: CMakeLists.txt  test_physics.cpp
tools/: CMakeLists.txt
tools/asset-pipeline/: CMakeLists.txt  asset_converter.cpp
